# gazebo

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  conftest.py  lefthook.yml  pyproject.toml  versions.json  zensical.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
dev/: 404.html  index.html  objects.inv  search.json  sitemap.xml
dev/core/: index.html
dev/di/: index.html
dev/example/: index.html
dev/fastapi/: index.html
dev/getting-started/: index.html
dev/reference/: index.html
dev/serving/: index.html
dev/testing/: index.html
dev/why/: index.html
docs/: example.md  getting-started.md  index.md  reference.md  serving.md  why.md
docs/core/: collections.md  constants.md  context.md  filtering.md  geojson.md  index.md  links.md  negotiation.md  ogc.md  params.md  problems.md
docs/di/: index.md  providers.md  qualifiers-overrides.md  scopes.md
docs/fastapi/: app.md  caching.md  index.md  proxy.md  routers.md
docs/testing/: assertions.md  fixtures.md  index.md  pagination.md
examples/garden/: README.md  conftest.py  pyproject.toml
examples/garden/garden/: __init__.py  __main__.py  api.py  app.py  models.py  resources.py
examples/garden/tests/: test_app.py
src/gazebo/: __init__.py  asgi.py  caching.py  collection.py  context.py  geojson.py  link.py  linkheader.py  negotiation.py  ogc.py  pagination.py  params.py  problems.py  rels.py  requestid.py  serialization.py  tags.py  testing.py
tests/: conftest.py  test_asgi.py  test_caching.py  test_cli.py  test_collection.py  test_core_ogc.py  test_di.py  test_examples.py  test_fastapi.py  test_filtering.py  test_geojson.py  test_jsonschema.py  test_link.py  test_linkheader.py  test_negotiation.py  test_pagination.py  test_params.py  test_problems.py  test_serialization.py  test_testing.py  test_uvicorn_ext.py
tests/examples/: __init__.py  app.py  caching.py  collections.py  constants.py  context.py  filtering.py  geojson.py  getting_started.py  links.py  negotiation.py  ogc.py  params.py  problems.py  providers.py  proxy.py  qualifiers_overrides.py  routers.py  scopes.py  serving.py  testing.py  why_after.py  why_before.py
tests/ext_fastapi/: conftest.py  support.py  test_app.py  test_caching.py  test_context.py  test_cors.py  test_filtering.py  test_folded.py  test_injection.py  test_negotiation.py  test_params.py  test_problems.py  test_responses.py  test_routers.py
v0.1.0/: 404.html  index.html  objects.inv  search.json  sitemap.xml
v0.1.0/core/: index.html
v0.1.0/di/: index.html
v0.1.0/example/: index.html
v0.1.0/fastapi/: index.html
v0.1.0/getting-started/: index.html
v0.1.0/reference/: index.html
v0.10.0/: 404.html  index.html  objects.inv  search.json  sitemap.xml
v0.10.0/core/: index.html
v0.10.0/di/: index.html
v0.10.0/example/: index.html
v0.10.0/fastapi/: index.html
v0.10.0/getting-started/: index.html
v0.10.0/reference/: index.html
v0.10.0/serving/: index.html
v0.10.0/testing/: index.html
v0.10.0/why/: index.html
v0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.2.0/core/: index.html
v0.2.0/di/: index.html
v0.2.0/example/: index.html
v0.2.0/fastapi/: index.html
v0.2.0/getting-started/: index.html
v0.2.0/reference/: index.html
v0.2.0/testing/: index.html
v0.3.0/: 404.html  index.html  objects.inv  search.json  sitemap.xml
v0.3.0/core/: index.html
v0.3.0/di/: index.html
v0.3.0/example/: index.html
v0.3.0/fastapi/: index.html
v0.3.0/getting-started/: index.html
v0.3.0/reference/: index.html
v0.3.0/testing/: index.html
v0.4.0/: 404.html  index.html  objects.inv  search.json  sitemap.xml
v0.4.0/core/: index.html
v0.4.0/di/: index.html
v0.4.0/example/: index.html
v0.4.0/fastapi/: index.html
v0.4.0/getting-started/: index.html
v0.4.0/reference/: index.html
v0.4.0/serving/: index.html
v0.4.0/testing/: index.html
v0.4.1/: 404.html  index.html  sitemap.xml
v0.4.1/core/: index.html
v0.4.1/di/: index.html
v0.4.1/example/: index.html
v0.4.1/fastapi/: index.html
v0.4.1/getting-started/: index.html
v0.4.1/reference/: index.html
v0.4.1/serving/: index.html
v0.4.1/testing/: index.html
v0.5.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.5.0/core/: index.html
v0.5.0/di/: index.html
v0.5.0/example/: index.html
v0.5.0/fastapi/: index.html
v0.5.0/getting-started/: index.html
v0.5.0/reference/: index.html
v0.5.0/serving/: index.html
v0.5.0/testing/: index.html
v0.6.0/: 404.html  index.html  sitemap.xml
v0.6.0/core/: index.html
v0.6.0/di/: index.html
v0.6.0/example/: index.html
v0.6.0/fastapi/: index.html
v0.6.0/getting-started/: index.html
v0.6.0/reference/: index.html
v0.6.0/serving/: index.html
v0.6.0/testing/: index.html
v0.7.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.7.0/core/: index.html
v0.7.0/di/: index.html
v0.7.0/example/: index.html
v0.7.0/fastapi/: index.html
v0.7.0/getting-started/: index.html
v0.7.0/reference/: index.html
v0.7.0/serving/: index.html
v0.7.0/testing/: index.html
v0.7.1/: 404.html  index.html  sitemap.xml
v0.7.1/core/: index.html
v0.7.1/di/: index.html
v0.7.1/example/: index.html
v0.7.1/fastapi/: index.html
v0.7.1/getting-started/: index.html
v0.7.1/reference/: index.html
v0.7.1/serving/: index.html
v0.7.1/testing/: index.html
v0.7.1/why/: index.html
v0.8.0/: 404.html  index.html  objects.inv  search.json  sitemap.xml
v0.8.0/core/: index.html
v0.8.0/di/: index.html
v0.8.0/example/: index.html
v0.8.0/fastapi/: index.html
v0.8.0/getting-started/: index.html
v0.8.0/reference/: index.html
v0.8.0/serving/: index.html
v0.8.0/testing/: index.html
v0.8.0/why/: index.html
v0.9.0/: 404.html  index.html  objects.inv  search.json  sitemap.xml
v0.9.0/core/: index.html
v0.9.0/di/: index.html
v0.9.0/example/: index.html
v0.9.0/fastapi/: index.html
v0.9.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.9.2/: 404.html  index.html  sitemap.xml
v0.9.3/: 404.html  index.html  objects.inv  sitemap.xml
(+365 files in other folders)
