[project]
name = "gazebo-garden-example"
version = "0.0.0"
description = "Gazebo Gardens — a complete example API built with gazebo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gazebo[fastapi,geojson]",
    "uvicorn>=0.30",
]

[project.scripts]
garden = "garden.app:main"

# Resolve gazebo from the workspace root (this example is a workspace member).
[tool.uv.sources]
gazebo = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["garden"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24",
    "httpx2>=2.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.ruff]
line-length = 99

[tool.ruff.format]
quote-style = "single"
